--- a/views/new_service.erb
+++ b/views/new_service.erb
@@ -1,48 +1,66 @@
-<div class="form-container">
-    <h2>➕ Добавить новую службу</h2>
-    
-    <% if @errors %>
-        <div class="flash error">
-            <% @errors.each do |error| %>
-                <p><%= error %></p>
-            <% end %>
+<div class="row justify-content-center">
+    <div class="col-lg-8">
+        <div class="card">
+            <div class="card-header bg-primary text-white">
+                <h4 class="mb-0">
+                    <i class="bi bi-plus-circle"></i> Добавить новую службу
+                </h4>
+            </div>
+            <div class="card-body">
+                <% if @errors %>
+                    <div class="alert alert-danger">
+                        <h5 class="alert-heading">Ошибки:</h5>
+                        <ul class="mb-0">
+                            <% @errors.each do |error| %>
+                                <li><%= error %></li>
+                            <% end %>
+                        </ul>
+                    </div>
+                <% end %>
+                
+                <form method="post" action="/services">
+                    <div class="row">
+                        <div class="col-md-6 mb-3">
+                            <label for="name" class="form-label">Название службы *</label>
+                            <input type="text" class="form-control" id="name" name="name" required 
+                                   placeholder="Например: Мой веб-сервер">
+                        </div>
+                        
+                        <div class="col-md-6 mb-3">
+                            <label for="port" class="form-label">Порт</label>
+                            <input type="number" class="form-control" id="port" name="port" 
+                                   placeholder="3000">
+                        </div>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="project_path" class="form-label">Путь к проекту *</label>
+                        <input type="text" class="form-control" id="project_path" name="project_path" required 
+                               placeholder="C:\Projects\MyApp" value="<%= params[:project_path] %>">
+                        <div class="form-text">Полный путь к папке с проектом</div>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="command" class="form-label">Команда запуска *</label>
+                        <input type="text" class="form-control" id="command" name="command" required 
+                               placeholder="ruby app.rb -o 0.0.0.0 -p 3000">
+                        <div class="form-text">Команда которая выполнится в папке проекта</div>
+                    </div>
+                    
+                    <div class="mb-3">
+                        <label for="description" class="form-label">Описание</label>
+                        <textarea class="form-control" id="description" name="description" rows="2" 
+                                  placeholder="Краткое описание службы"></textarea>
+                    </div>
+                    
+                    <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+                        <a href="/" class="btn btn-secondary me-md-2">Отмена</a>
+                        <button type="submit" class="btn btn-primary">
+                            <i class="bi bi-check-circle"></i> Создать службу
+                        </button>
+                    </div>
+                </form>
+            </div>
         </div>
-    <% end %>
-    
-    <form method="post" action="/services">
-        <div class="form-group">
-            <label for="name">Название службы:</label>
-            <input type="text" id="name" name="name" required placeholder="Например: Мой веб-сервер">
-        </div>
-        
-        <div class="form-group">
-            <label for="project_path">Путь к проекту:</label>
-            <input type="text" id="project_path" name="project_path" required 
-                   placeholder="C:\Projects\MyApp" value="<%= params[:project_path] %>">
-            <small>Полный путь к папке с проектом</small>
-        </div>
-        
-        <div class="form-group">
-            <label for="command">Команда запуска:</label>
-            <input type="text" id="command" name="command" required 
-                   placeholder="ruby app.rb -o 0.0.0.0 -p 3000">
-            <small>Команда которая выполнится в папке проекта</small>
-        </div>
-        
-        <div class="form-group">
-            <label for="description">Описание (необязательно):</label>
-            <input type="text" id="description" name="description" 
-                   placeholder="Краткое описание службы">
-        </div>
-        
-        <div class="form-group">
-            <label for="port">Порт (необязательно):</label>
-            <input type="number" id="port" name="port" placeholder="3000">
-        </div>
-        
-        <div class="form-actions">
-            <button type="submit" class="btn btn-start">Создать службу</button>
-            <a href="/" class="btn btn-secondary">Отмена</a>
-        </div>
-    </form>
+    </div>
 </div>
